--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "chalk": "latest",
+    "curl": "^0.1.4",
     "handlebars": "^4.5.1",
     "http-server": "^0.11.1"
   }
