--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "anydoor",
-  "version": "1.0.0",
+  "name": "anydoor_cregskin",
+  "version": "0.2.0",
+  "main": "src/app.js",
+  "bin": {
+    "anydoor": "bin/anydoor"
+  },
   "dependencies": {
     "chalk": "latest",
     "curl": "^0.1.4",
     "handlebars": "^4.5.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "yargs": "^14.2.0"
   }
 }
